[workspace]
members = [
]
[package]
name = "rs"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rs"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/abcm2ps.rs"
name = "abcm2ps"
[dependencies]
c2rust-bitfields= "0.3"
libc= "0.2"
